kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: millab-frontend
  namespace: default
  labels:
    app: millab-frontend
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: millab-frontend
  template:
    metadata:
      labels:
        app: millab-frontend
    spec:
      containers:
      - name: millab-frontend
        image: ${APP_IMAGE}
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
        resources:
          requests:
            cpu: 200m
            memory: 384Mi
          limits:
            cpu: 800m
            memory: 768Mi
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
